# HyprElastic

./: .gitignore  README.md  dev.sh  flake.nix  hyprlandd.conf  meson.build  plugin.nix  run.sh
.github/: FUNDING.yml
.github/workflows/: update-loc.yml
include/: RenderWobbly.hpp  SpringPhysics.hpp  WobblyTransformer.hpp  WobblyWindow.hpp  globals.h  renderpasses.h  wobblywindow.h
src/: RenderWobbly.cpp  SpringPhysics.cpp  WobblyTransformer.cpp  WobblyWindow.cpp  main.cpp  meson.build  renderpasses.cpp  wobblywindow.cpp
